# rave

./: CMakeLists.txt  LICENSE  README.md  conanfile.txt
inc/: Canvas.h  Shader.h  Simulation.h  State.h  Window.h  cuda_helpers.h
inc/glad/: glad.h
shaders/: shader.frag  shader.vert
src/: Canvas.cpp  Shader.cpp  Simulation.cu  State.cu  Window.cpp  colormap.cu  example.cu  fractal.cpp  glad.cpp  main.cpp
